--- a/index.html
+++ b/index.html
@@ -183,125 +183,72 @@
     <div id="games" class="content active">
         <h2>Games</h2>
         <div class="games-container" id="games-container">
-            <!-- Game 1: Happy Wheels -->
+            <!-- Game 12: Happy Wheels -->
             <div class="game" data-game="https://games-online.io/game/HappyWheels/" data-name="Happy Wheels">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Happy_Wheels_logo.svg/1200px-Happy_Wheels_logo.svg.png" alt="Happy Wheels"> <!-- Placeholder image -->
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTj_qZAxS9_mOuv90OH4m4qzzl5V6s2_KtO5Q&s" alt="Happy Wheels"> <!-- Placeholder image -->
                 <div class="game-name">Happy Wheels</div>
             </div>
-            <!-- Game 2: Snowball.io -->
+
+            <!-- Game 13: Snowball.io -->
             <div class="game" data-game="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/SQLite4Unity3d@8516fc0bd1d2be662ca484f5dc506268b24763ef/Example/Assets/snowball.xml&container=ig" data-name="Snowball.io">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Snowballio_game_logo.png" alt="Snowball.io"> <!-- Placeholder image -->
+                <img src="https://www.pikpng.com/pngl/b/361-3613421_snowball-io-snowball-io-logo-png-transparent.png" alt="Snowball.io"> <!-- Placeholder image -->
                 <div class="game-name">Snowball.io</div>
             </div>
-            <!-- Game 3: Dune -->
+
+            <!-- Game 14: Dune -->
             <div class="game" data-game="https://scratch.mit.edu/projects/365254777/embed" data-name="Dune">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Dune_logo.png" alt="Dune"> <!-- Placeholder image -->
+                <img src="https://www.speedrun.com/game/y8q5m0e9/cover.png" alt="Dune"> <!-- Placeholder image -->
                 <div class="game-name">Dune</div>
             </div>
-            <!-- Game 4: Crossy Road -->
+
+            <!-- Game 15: Crossy Road -->
             <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bessiegasbarro/CTRoad@48e0fa150a66bcd0e589e46c0bdd84c3f520a4f3/ctr.xml&container=ig" data-name="Crossy Road">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Crossy_Road_Logo.png" alt="Crossy Road"> <!-- Placeholder image -->
+                <img src="https://play-lh.googleusercontent.com/ftNlDpwaxtpXMzoXYNLMUJtJ1Qm5OlaHY9A6nEyj1o_vmb-VJowocfqZfv5hD93x8rY" alt="Crossy Road"> <!-- Placeholder image -->
                 <div class="game-name">Crossy Road</div>
             </div>
-            <!-- Game 5: Cookie Clicker -->
+
+            <!-- Game 16: Cookie Clicker -->
             <div class="game" data-game="https://webglmath.github.io/cookie-clicker/" data-name="Cookie Clicker">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Cookie_Clicker_logo.png" alt="Cookie Clicker"> <!-- Placeholder image -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Cookie_Clicker_Logo.png/800px-Cookie_Clicker_Logo.png" alt="Cookie Clicker"> <!-- Placeholder image -->
                 <div class="game-name">Cookie Clicker</div>
             </div>
-            <!-- Game 6: Tomb of the Mask -->
+
+            <!-- Game 17: Tomb of the Mask -->
             <div class="game" data-game="https://scratch.mit.edu/projects/468203032/embed" data-name="Tomb of the Mask">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a1/Tomb_of_the_Mask_logo.png" alt="Tomb of the Mask"> <!-- Placeholder image -->
+                <img src="https://www.speedrun.com/static/game/yzg9wfr9/cover.png?v=424fcd1" alt="Tomb of the Mask"> <!-- Placeholder image -->
                 <div class="game-name">Tomb of the Mask</div>
             </div>
-            <!-- Game 7: Pop the Lock -->
+
+            <!-- Game 18: Pop the Lock -->
             <div class="game" data-game="https://scratch.mit.edu/projects/977322731/embed" data-name="Pop the Lock">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Pop_the_Lock_Logo.png" alt="Pop the Lock"> <!-- Placeholder image -->
+                <img src="https://www.speedrun.com/static/game/jzdq7lr2/cover.png?v=424fcd1" alt="Pop the Lock"> <!-- Placeholder image -->
                 <div class="game-name">Pop the Lock</div>
             </div>
-            <!-- Game 8: Car Driving -->
+
+            <!-- Game 19: Car Driving -->
             <div class="game" data-game="https://gg-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/UnityExplorer@b38448679f5490397649c620ad8f803f834df565/UI/card.xml&container=ig" data-name="Car Driving">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Car_driving_logo.png" alt="Car Driving"> <!-- Placeholder image -->
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzn2Kym87f66ihkz2pnFxlPOhqr_-_a7kd-vfoIq5_3O5GROZaEL1iXqChx-2ZTzFfGeT5jxVw0JUO9bXex0MLG4BqZ" alt="Car Driving"> <!-- Placeholder image -->
                 <div class="game-name">Car Driving</div>
             </div>
         </div>
     </div>
 
-    <div id="apps" class="content">
-        <h2>Apps</h2>
-        <p>No apps available yet.</p>
-    </div>
-
-    <div id="updates" class="content">
-        <h2>Updates</h2>
-        <p>Added More Games and fixed Screen Bug</p>
-    </div>
-
-    <div id="game-page" class="game-page" style="display: none;">
-        <button class="go-back" onclick="goBack()">Go Back</button>
-        <h2 id="game-title"></h2>
-        <iframe id="game-frame" width="100%" height="500px"></iframe>
-    </div>
-
-    <footer>© 2024 Unblocked Games Hub</footer>
+    <footer>Powered by Unblocked Games Hub</footer>
 
     <script>
-        const tabs = document.querySelectorAll('.tab');
-        const contents = document.querySelectorAll('.content');
-        const games = document.querySelectorAll('.game');
-        const gameFrame = document.getElementById('game-frame');
-        const gamePage = document.getElementById('game-page');
-        const gameTitle = document.getElementById('game-title');
-        const searchInput = document.getElementById('search');
-        const gamesContainer = document.getElementById('games-container');
-
-        // Tab switching functionality
-        tabs.forEach(tab => {
-            tab.addEventListener('click', () => {
-                tabs.forEach(t => t.classList.remove('active'));
-                tab.classList.add('active');
-
-                contents.forEach(content => {
-                    content.classList.remove('active');
-                    if (content.id === tab.dataset.tab) {
-                        content.classList.add('active');
-                    }
-                });
+        // Tab navigation functionality
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', function () {
+                // Switch active tab
+                document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+                this.classList.add('active');
+                const activeTab = this.getAttribute('data-tab');
+                
+                // Show content of the active tab
+                document.querySelectorAll('.content').forEach(content => content.classList.remove('active'));
+                document.getElementById(activeTab).classList.add('active');
             });
         });
-
-        games.forEach(game => {
-            game.addEventListener('click', () => {
-                const gameUrl = game.dataset.game;
-                const gameName = game.dataset.name;
-
-                gameTitle.textContent = gameName;
-                gameFrame.src = gameUrl;
-
-                // Hide the game container and display the game page
-                document.getElementById('games').style.display = 'none';
-                gamePage.style.display = 'block';
-            });
-        });
-
-        // Search functionality
-        searchInput.addEventListener('input', (e) => {
-            const query = e.target.value.toLowerCase();
-            games.forEach(game => {
-                const gameName = game.dataset.name.toLowerCase();
-                if (gameName.includes(query)) {
-                    game.style.display = 'block';
-                } else {
-                    game.style.display = 'none';
-                }
-            });
-        });
-
-        function goBack() {
-            // Stop the game and go back
-            gameFrame.src = '';
-            document.getElementById('games').style.display = 'block';
-            gamePage.style.display = 'none';
-        }
     </script>
 </body>
 </html>
