--- a/index.html
+++ b/index.html
@@ -183,52 +183,89 @@
     <div id="games" class="content active">
         <h2>Games</h2>
         <div class="games-container" id="games-container">
-            <!-- Game 12: Happy Wheels -->
-            <div class="game" data-game="https://games-online.io/game/HappyWheels/" data-name="Happy Wheels">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTj_qZAxS9_mOuv90OH4m4qzzl5V6s2_KtO5Q&s" alt="Happy Wheels"> <!-- Placeholder image -->
-                <div class="game-name">Happy Wheels</div>
+            <!-- Existing Games -->
+            <div class="game" data-game="https://bitlifeonline.github.io/class2623/funny-shooter-2/" data-name="Funny Shooter 2">
+                <img src="https://img.poki-cdn.com/cdn-cgi/image/quality=78,width=1200,height=1200,fit=cover,f=png/894abba63a6b23fed823f404831f444f.jpeg" alt="Funny Shooter 2">
+                <div class="game-name">Funny Shooter 2</div>
             </div>
-
-            <!-- Game 13: Snowball.io -->
-            <div class="game" data-game="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/SQLite4Unity3d@8516fc0bd1d2be662ca484f5dc506268b24763ef/Example/Assets/snowball.xml&container=ig" data-name="Snowball.io">
-                <img src="https://www.pikpng.com/pngl/b/361-3613421_snowball-io-snowball-io-logo-png-transparent.png" alt="Snowball.io"> <!-- Placeholder image -->
-                <div class="game-name">Snowball.io</div>
+            <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bobydob/JSEngine@5ebf5ebca88beaad3f3e9dcf461e25778c2a1a56/build/bl20/bl2020.xml&container=ig" data-name="Basketball Legends">
+                <img src="https://play-lh.googleusercontent.com/ic00VASLUq4PMhmWyvYtAIaexc4X3dYXyDSMf4ThI6kIaxPVvKPw9xaszcUFvTAKHj8" alt="Basketball Legends">
+                <div class="game-name">Basketball Legends</div>
             </div>
-
-            <!-- Game 14: Dune -->
-            <div class="game" data-game="https://scratch.mit.edu/projects/365254777/embed" data-name="Dune">
-                <img src="https://www.speedrun.com/game/y8q5m0e9/cover.png" alt="Dune"> <!-- Placeholder image -->
-                <div class="game-name">Dune</div>
+            <div class="game" data-game="https://ly4fsf.csb.app/" data-name="Subway Surfers">
+                <img src="https://play-lh.googleusercontent.com/Y1sBvjs4B9nZhNR3wQMD-aSdkCJl1j1KrezuayLCrra13LZYecvCy-Eipf3pGaIH4v_C" alt="Subway Surfers">
+                <div class="game-name">Subway Surfers</div>
             </div>
-
-            <!-- Game 15: Crossy Road -->
-            <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bessiegasbarro/CTRoad@48e0fa150a66bcd0e589e46c0bdd84c3f520a4f3/ctr.xml&container=ig" data-name="Crossy Road">
-                <img src="https://play-lh.googleusercontent.com/ftNlDpwaxtpXMzoXYNLMUJtJ1Qm5OlaHY9A6nEyj1o_vmb-VJowocfqZfv5hD93x8rY" alt="Crossy Road"> <!-- Placeholder image -->
-                <div class="game-name">Crossy Road</div>
+            <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/WebStarterkit@27197d685502953065e3a3259b6e34f5acb94e65/src/sp1.5.xml&container=ig" data-name="Slope">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_jOGkGj0Auir2Z0KqYkPVM0-RDgPR-6M5Gg&s" alt="Slope">
+                <div class="game-name">Slope</div>
             </div>
-
-            <!-- Game 16: Cookie Clicker -->
-            <div class="game" data-game="https://webglmath.github.io/cookie-clicker/" data-name="Cookie Clicker">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Cookie_Clicker_Logo.png/800px-Cookie_Clicker_Logo.png" alt="Cookie Clicker"> <!-- Placeholder image -->
-                <div class="game-name">Cookie Clicker</div>
+            <div class="game" data-game="https://classroomjq.github.io/class2623/time-shooter-3-swat/" data-name="Time Shooter">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQev9Sddx8DQk_gkGzI2Kze5ocs3lu1hqgA-w&s" alt="Time Shooter">
+                <div class="game-name">Time Shooter</div>
             </div>
-
-            <!-- Game 17: Tomb of the Mask -->
-            <div class="game" data-game="https://scratch.mit.edu/projects/468203032/embed" data-name="Tomb of the Mask">
-                <img src="https://www.speedrun.com/static/game/yzg9wfr9/cover.png?v=424fcd1" alt="Tomb of the Mask"> <!-- Placeholder image -->
-                <div class="game-name">Tomb of the Mask</div>
+            <div class="game" data-game="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://147294106-271957305593713958.preview.editmysite.com/uploads/b/146211889-736862448591698921/files/stio.xml&container=ig" data-name="Skibidi Toilet">
+                <img src="https://static.wikia.nocookie.net/skibidi-toilet-official/images/b/b1/GiantST.png/revision/latest/thumbnail/width/360/height/360?cb=20240205231829" alt="Skibidi Toilet">
+                <div class="game-name">Skibidi Toilet</div>
             </div>
-
-            <!-- Game 18: Pop the Lock -->
-            <div class="game" data-game="https://scratch.mit.edu/projects/977322731/embed" data-name="Pop the Lock">
-                <img src="https://www.speedrun.com/static/game/jzdq7lr2/cover.png?v=424fcd1" alt="Pop the Lock"> <!-- Placeholder image -->
-                <div class="game-name">Pop the Lock</div>
+            <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://649025137-174029463385024710.preview.editmysite.com/uploads/b/139890129-767696982876512205/files/mx3mpp.xml&container=ig" data-name="Moto X3M Pool Party">
+                <img src="https://img.poki-cdn.com/cdn-cgi/image/quality=78,width=1200,height=1200,fit=cover,f=png/0235b530eec4f17ad60137f6b245a988.jpeg" alt="Moto X3M Pool Party">
+                <div class="game-name">Moto X3M Pool Party</div>
             </div>
-
-            <!-- Game 19: Car Driving -->
-            <div class="game" data-game="https://gg-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/UnityExplorer@b38448679f5490397649c620ad8f803f834df565/UI/card.xml&container=ig" data-name="Car Driving">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzn2Kym87f66ihkz2pnFxlPOhqr_-_a7kd-vfoIq5_3O5GROZaEL1iXqChx-2ZTzFfGeT5jxVw0JUO9bXex0MLG4BqZ" alt="Car Driving"> <!-- Placeholder image -->
-                <div class="game-name">Car Driving</div>
+            <div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://471058263-725410472258601738.preview.editmysite.com/uploads/b/139890129-510930859892590631/files/sr.xml&container=ig" data-name="Soccer Random">
+                <img src="https://play-lh.googleusercontent.com/G1PIlb6HWKSaDre0XpUcmKGps9T4iamsSlwrogB3EJzYv4bz0M2am4D17MtGzndaOOU" alt="Soccer Random">
+                <div class="game-name">Soccer Random</div>
+            </div>
+            <div class="game" data-game="https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=afedeabb2fce9b51&libs=core&mid=88&parent=https://sites.google.com/site/unblockedgame76/retrobowl#st=e%3DAIHE3cA1zgmQ7PKxlx7gtXV8Ub9dOexMzGOvLpmP90ETyaA0SJuy%252F%252FHkPGbYwCvaGPhFsAdc7rRc6%252BybvNKZAUCjKAd4wrUvwKDuBOb6QApVN9bfKbiXPEm48GiSwjjxDyoReMGHB3Wg%26c%3Denterprise&rpctoken=2316186717334572930" data-name="Retro Bowl">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" alt="Retro Bowl">
+                <div class="game-name">Retro Bowl</div>
+            </div>
+            <div class="game" data-game="https://outgoingmail.github.io/sunset/" data-name="Tanuki Sunset">
+                <img src="https://www.speedrun.com/static/game/yd4o44g1/cover.png?v=d411b8f" alt="Tanuki Sunset">
+                <div class="game-name">Tanuki Sunset</div>
+            </div>
+            <div class="game" data-game="https://script.google.com/a/macros/educ.dpcdsb.org/s/AKfycbw8iHPqdVFEzquUYbNxFVAu1Tw4Nri5SWMRLdP_c7a84vCOHVG7YUWuhjSVptg1SVHr/exec" data-name="Drift Hunters">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRKBdB5CWxxefFqmvk50ZyASmiqoedPxyqTGYGH8jbi1KSNAslMjCTxXMXi3K1adG43QTa" alt="Drift Hunters">
+                <div class="game-name">Drift Hunters</div>
+                <div class="game" data-game="https://games-online.io/game/HappyWheels/" data-name="Happy Wheels">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTj_qZAxS9_mOuv90OH4m4qzzl5V6s2_KtO5Q&s" alt="Happy Wheels">
+    <div class="game-name">Happy Wheels</div>
+</div>
+<!-- Game 13: Snowball.io -->
+<div class="game" data-game="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/SQLite4Unity3d@8516fc0bd1d2be662ca484f5dc506268b24763ef/Example/Assets/snowball.xml&container=ig" data-name="Snowball.io">
+    <img src="https://www.pikpng.com/pngl/b/361-3613421_snowball-io-snowball-io-logo-png-transparent.png" alt="Snowball.io">
+    <div class="game-name">Snowball.io</div>
+</div>
+<!-- Game 14: Dune -->
+<div class="game" data-game="https://scratch.mit.edu/projects/365254777/embed" data-name="Dune">
+    <img src="https://www.speedrun.com/game/y8q5m0e9/cover.png" alt="Dune">
+    <div class="game-name">Dune</div>
+</div>
+<!-- Game 15: Crossy Road -->
+<div class="game" data-game="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bessiegasbarro/CTRoad@48e0fa150a66bcd0e589e46c0bdd84c3f520a4f3/ctr.xml&container=ig" data-name="Crossy Road">
+    <img src="https://play-lh.googleusercontent.com/ftNlDpwaxtpXMzoXYNLMUJtJ1Qm5OlaHY9A6nEyj1o_vmb-VJowocfqZfv5hD93x8rY" alt="Crossy Road">
+    <div class="game-name">Crossy Road</div>
+</div>
+<!-- Game 16: Cookie Clicker -->
+<div class="game" data-game="https://webglmath.github.io/cookie-clicker/" data-name="Cookie Clicker">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Cookie_Clicker_Logo.png/800px-Cookie_Clicker_Logo.png" alt="Cookie Clicker">
+    <div class="game-name">Cookie Clicker</div>
+</div>
+<!-- Game 17: Tomb of the Mask -->
+<div class="game" data-game="https://scratch.mit.edu/projects/468203032/embed" data-name="Tomb of the Mask">
+    <img src="https://www.speedrun.com/static/game/yzg9wfr9/cover.png?v=424fcd1" alt="Tomb of the Mask">
+    <div class="game-name">Tomb of the Mask</div>
+</div>
+<!-- Game 18: Pop the Lock -->
+<div class="game" data-game="https://scratch.mit.edu/projects/977322731/embed" data-name="Pop the Lock">
+    <img src="https://www.speedrun.com/static/game/jzdq7lr2/cover.png?v=424fcd1" alt="Pop the Lock">
+    <div class="game-name">Pop the Lock</div>
+</div>
+<!-- Game 19: Car Driving -->
+<div class="game" data-game="https://gg-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/gertdoro/UnityExplorer@b38448679f5490397649c620ad8f803f834df565/UI/card.xml&container=ig" data-name="Car Driving">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzn2Kym87f66ihkz2pnFxlPOhqr_-_a7kd-vfoIq5_3O5GROZaEL1iXqChx-2ZTzFfGeT5jxVw0JUO9bXex0MLG4BqZ" alt="Car Driving">
+    <div class="game-name">Car Driving</div>
+</div>
             </div>
         </div>
     </div>
@@ -240,13 +277,33 @@
         document.querySelectorAll('.tab').forEach(tab => {
             tab.addEventListener('click', function () {
                 // Switch active tab
-                document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
                 this.classList.add('active');
-                const activeTab = this.getAttribute('data-tab');
-                
-                // Show content of the active tab
+
+                // Show corresponding content
                 document.querySelectorAll('.content').forEach(content => content.classList.remove('active'));
-                document.getElementById(activeTab).classList.add('active');
+                const activeContent = document.getElementById(this.dataset.tab);
+                activeContent.classList.add('active');
+            });
+        });
+
+        // Search functionality
+        document.getElementById('search').addEventListener('input', function () {
+            const query = this.value.toLowerCase();
+            document.querySelectorAll('.game').forEach(game => {
+                const gameName = game.getAttribute('data-name').toLowerCase();
+                if (gameName.includes(query)) {
+                    game.style.display = 'block';
+                } else {
+                    game.style.display = 'none';
+                }
+            });
+        });
+
+        // Game click behavior
+        document.querySelectorAll('.game').forEach(game => {
+            game.addEventListener('click', function () {
+                window.location.href = this.getAttribute('data-game');
             });
         });
     </script>
