--- a/index.html
+++ b/index.html
@@ -200,7 +200,20 @@
       { name: "Skibidi Toilet", url: "https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://147294106-271957305593713958.preview.editmysite.com/uploads/b/146211889-736862448591698921/files/stio.xml&container=ig", img: "https://static.wikia.nocookie.net/skibidi-toilet-official/images/b/b1/GiantST.png/revision/latest/thumbnail/width/360/height/360?cb=20240205231829" },
       { name: "Moto X3M Pool Party", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://649025137-174029463385024710.preview.editmysite.com/uploads/b/139890129-767696982876512205/files/mx3mpp.xml&container=ig", img: "https://img.poki-cdn.com/cdn-cgi/image/quality=78,width=1200,height=1200,fit=cover,f=png/0235b530eec4f17ad60137f6b245a988.jpeg" },
       { name: "Soccer Random", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://471058263-725410472258601738.preview.editmysite.com/uploads/b/139890129-510930859892590631/files/sr.xml&container=ig", img: "https://play-lh.googleusercontent.com/G1PIlb6HWKSaDre0XpUcmKGps9T4iamsSlwrogB3EJzYv4bz0M2am4D17MtGzndaOOU" },
-      { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" }
+      { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" },
+      { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "Stickman Hook", url: "https://canvas.global.ssl.fastly.net/gxmez/stickman.html", img: "https://canvas.global.ssl.fastly.net/assets/stickman.png" },
+      { name: "Roblox", url: "https://canvas.global.ssl.fastly.net/gxmez/roblox.html", img: "https://canvas.global.ssl.fastly.net/assets/roblox.png" },
+      { name: "Paperio 2", url: "https://canvas.global.ssl.fastly.net/gsrc/paperio2/index.html", img: "https://canvas.global.ssl.fastly.net/assets/paperio.png" },
+      { name: "Krunker", url: "https://canvas.global.ssl.fastly.net/gxmez/krunker.html", img: "https://canvas.global.ssl.fastly.net/assets/krunker.png" },
+      { name: "Grand Theft Auto Chinatown", url: "https://canvas.global.ssl.fastly.net/emulatorjs/gtacw/index.html", img: "https://canvas.global.ssl.fastly.net/assets/gtacw.png" },
+      { name: "Call Of Duty", url: "https://canvas.global.ssl.fastly.net/gxmez/cod.html", img: "https://canvas.global.ssl.fastly.net/assets/cod.png" },
+      { name: "Baldi", url: "https://canvas.global.ssl.fastly.net/gxmez/baldi.html", img: "https://canvas.global.ssl.fastly.net/assets/baldi.png" },
+      { name: "1v1.lol", url: "https://canvas.global.ssl.fastly.net/gsrc/1v1lol/index.html", img: "https://canvas.global.ssl.fastly.net/assets/latest%20(1).png" },
+      { name: "Drive Mad", url: "https://canvas.global.ssl.fastly.net/gsrc/bloxors/index.html", img: "https://canvas.global.ssl.fastly.net/assets/drivemad.png" },
+      { name: "Infinite Craft", url: "https://canvas.global.ssl.fastly.net/gxmez/infinitecraft.html", img: "https://canvas.global.ssl.fastly.net/assets/infinitecraft.png" },
+      { name: "Bloxorz", url: "https://canvas.global.ssl.fastly.net/gsrc/bloxors/index.html", img: "https://canvas.global.ssl.fastly.net/assets/bloxors.png" },
+      { name: "Block Blast", url: "https://canvas.global.ssl.fastly.net/gxmez/blockblast.html", img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR2DYzG4e8vFxcSnQrpe2m1O8_b0S9GDGSag&s" }
     ];
 
 
