--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
       { name: "Soccer Random", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://471058263-725410472258601738.preview.editmysite.com/uploads/b/139890129-510930859892590631/files/sr.xml&container=ig", img: "https://play-lh.googleusercontent.com/G1PIlb6HWKSaDre0XpUcmKGps9T4iamsSlwrogB3EJzYv4bz0M2am4D17MtGzndaOOU" },
       { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" },
       { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "My Friend Pedro", url: "https://canvas.global.ssl.fastly.net/gsrc/my-friend-pedro/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pedro.png" },
+      { name: "Pokemon Diamond", url: "https://canvas.global.ssl.fastly.net/emulatorjs/pkd/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pkd.png" },
+      { name: "Pokemon Pearl ", url: "https://canvas.global.ssl.fastly.net/emulatorjs/pkp/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pkp.png" },
+      { name: "Osu", url: "https://canvas.global.ssl.fastly.net/gxmez/osu.html", img: "https://canvas.global.ssl.fastly.net/assets/osu.png" },
+      { name: "Stumble Guys", url: "https://canvas.global.ssl.fastly.net/gxmez/stumble.html", img: "https://canvas.global.ssl.fastly.net/assets/stumble.png" },
+      { name: "Tetris", url: "https://canvas.global.ssl.fastly.net/emulatorjs/tetris/index.html", img: "https://canvas.global.ssl.fastly.net/assets/tetris-sq-1643414363421.jpg" },
+      { name: "Venge", url: "https://canvas.global.ssl.fastly.net/gxmez/venge.html", img: "https://canvas.global.ssl.fastly.net/assets/venge.png" },
+      { name: "SuperHot", url: "https://canvas.global.ssl.fastly.net/gsrc/superhot/index.html", img: "https://canvas.global.ssl.fastly.net/assets/superhot.png" },
       { name: "Stickman Hook", url: "https://canvas.global.ssl.fastly.net/gxmez/stickman.html", img: "https://canvas.global.ssl.fastly.net/assets/stickman.png" },
       { name: "Roblox", url: "https://canvas.global.ssl.fastly.net/gxmez/roblox.html", img: "https://canvas.global.ssl.fastly.net/assets/roblox.png" },
       { name: "Paperio 2", url: "https://canvas.global.ssl.fastly.net/gsrc/paperio2/index.html", img: "https://canvas.global.ssl.fastly.net/assets/paperio.png" },
