--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
       { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" },
       { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
       { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "zelda", url: "https://canvas.global.ssl.fastly.net/emulatorjs/lozsnes/index.html", img: "https://canvas.global.ssl.fastly.net/assets/lozsnes.jpg" },
+      { name: "kirby dream land", url: "https://canvas.global.ssl.fastly.net/emulatorjs/kd3/index.html", img: "https://canvas.global.ssl.fastly.net/assets/kdb3.jpg" },
+      { name: "kirby mass attack", url: "https://canvas.global.ssl.fastly.net/emulatorjs/kma/index.html", img: "https://canvas.global.ssl.fastly.net/assets/kma.png" },
+      { name: "last seen online", url: "https://canvas.global.ssl.fastly.net/gsrc/lso/index.html", img: "https://canvas.global.ssl.fastly.net/assets/lso.png" },
+      { name: "Mortal Kombat", url: "https://canvas.global.ssl.fastly.net/emulatorjs/mkb/index.html", img: "https://canvas.global.ssl.fastly.net/assets/mkb.jpg" },
+      { name: "Mortal Kombat 2", url: "https://canvas.global.ssl.fastly.net/emulatorjs/mkb2/index.html", img: "https://canvas.global.ssl.fastly.net/assets/mkb2.png" },
       { name: "My Friend Pedro", url: "https://canvas.global.ssl.fastly.net/gsrc/my-friend-pedro/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pedro.png" },
       { name: "Pokemon Diamond", url: "https://canvas.global.ssl.fastly.net/emulatorjs/pkd/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pkd.png" },
       { name: "Pokemon Pearl ", url: "https://canvas.global.ssl.fastly.net/emulatorjs/pkp/index.html", img: "https://canvas.global.ssl.fastly.net/assets/pkp.png" },
