--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
       { name: "Soccer Random", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://471058263-725410472258601738.preview.editmysite.com/uploads/b/139890129-510930859892590631/files/sr.xml&container=ig", img: "https://play-lh.googleusercontent.com/G1PIlb6HWKSaDre0XpUcmKGps9T4iamsSlwrogB3EJzYv4bz0M2am4D17MtGzndaOOU" },
       { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" },
       { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
-      { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "bitlife", url: "https://canvas.global.ssl.fastly.net/gsrc/bitlife/index.html", img: "https://canvas.global.ssl.fastly.net/assets/bitlife.png" },
+      { name: "bloons td", url: "https://canvas.global.ssl.fastly.net/gsrc/bloonstd/index.html", img: "https://canvas.global.ssl.fastly.net/assets/btd.png" },
+      { name: "impossible quiz", url: "https://canvas.global.ssl.fastly.net/gsrc/impossiblequiz/index.html", img: "https://canvas.global.ssl.fastly.net/assets/impossiblequiz.png" },
+      { name: "friday night funkin", url: "https://canvas.global.ssl.fastly.net/gxmez/fridaynightfunkin.html", img: "https://canvas.global.ssl.fastly.net/assets/fnf.png" },
       { name: "zelda", url: "https://canvas.global.ssl.fastly.net/emulatorjs/lozsnes/index.html", img: "https://canvas.global.ssl.fastly.net/assets/lozsnes.jpg" },
       { name: "kirby dream land", url: "https://canvas.global.ssl.fastly.net/emulatorjs/kd3/index.html", img: "https://canvas.global.ssl.fastly.net/assets/kdb3.jpg" },
       { name: "kirby mass attack", url: "https://canvas.global.ssl.fastly.net/emulatorjs/kma/index.html", img: "https://canvas.global.ssl.fastly.net/assets/kma.png" },
