--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
       { name: "Moto X3M Pool Party", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://649025137-174029463385024710.preview.editmysite.com/uploads/b/139890129-767696982876512205/files/mx3mpp.xml&container=ig", img: "https://img.poki-cdn.com/cdn-cgi/image/quality=78,width=1200,height=1200,fit=cover,f=png/0235b530eec4f17ad60137f6b245a988.jpeg" },
       { name: "Soccer Random", url: "https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://471058263-725410472258601738.preview.editmysite.com/uploads/b/139890129-510930859892590631/files/sr.xml&container=ig", img: "https://play-lh.googleusercontent.com/G1PIlb6HWKSaDre0XpUcmKGps9T4iamsSlwrogB3EJzYv4bz0M2am4D17MtGzndaOOU" },
       { name: "Retro Bowl", url: "https://vtn5c31dcjtimmb9o2lm882bk13i56hh-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml&container=enterprise", img: "https://upload.wikimedia.org/wikipedia/en/b/bf/Retro_Bowl_cover.png" },
-      { name: "Place Holder", url: "https://canvas.global.ssl.fastly.net", img: "" },
+      { name: "buckshot", url: "https://canvas.global.ssl.fastly.net/gxmez/buckshot.html", img: "https://canvas.global.ssl.fastly.net/assets/buckshot.png" },
+      { name: "crossy road", url: "https://canvas.global.ssl.fastly.net/gxmez/crossy.html", img: "https://canvas.global.ssl.fastly.net/assets/crossy.png" },
       { name: "bitlife", url: "https://canvas.global.ssl.fastly.net/gsrc/bitlife/index.html", img: "https://canvas.global.ssl.fastly.net/assets/bitlife.png" },
       { name: "bloons td", url: "https://canvas.global.ssl.fastly.net/gsrc/bloonstd/index.html", img: "https://canvas.global.ssl.fastly.net/assets/btd.png" },
       { name: "impossible quiz", url: "https://canvas.global.ssl.fastly.net/gsrc/impossiblequiz/index.html", img: "https://canvas.global.ssl.fastly.net/assets/impossiblequiz.png" },
